@startuml 组织与权限

class Tenant {
    - tenantId: TenantId
    - code: String
    - name: String
    - state: SwitchState
'    - createdAt: Long
'    - updatedAt: Long
'    - createdBy: UserId
'    - updatedBy: UserId
}
class Organization {
     - orgId: Long
     - code: String
     - name: String
     - type: OrgType
     - parentId: Long
     - contact: String
     - state: SwitchState
     - ext: Text
     - tenantId: TenantId
 '    - createdAt: Long
 '    - updatedAt: Long
 '    - createdBy: UserId
 '    - updatedBy: UserId
 }
class AuthenticationProvider {
    + register(User u): Boolean
    + authenticate(Principal p): User
}
class AuthorizationProvider {
    + grant(RoleId rid, PermissionId pId): Boolean
    + grant(RoleId rid, Collection<PermissionId> pIds): Boolean
    + grant(UserId uid, RoleId rId): Boolean
    + grant(UserId uid, Collection<RoleId> rIds): Boolean
    + revoke(RoleId rid, PermissionId pId): Boolean
    + revoke(UserId uid, RoleId rId): Boolean
    + revokeAll(RoleId rId): Boolean
    + revokeAll(UserId uId): Boolean
}
class UserAggregate {
    - userId: UserId
    - name: String
    - password: String
    - state: SwitchState
    - tenantId: TenantId
    - rolesJson: Text
'    - createdAt: Long
'    - updatedAt: Long
'    - createdBy: UserId
'    - updatedBy: UserId
    + inRole(RoleId id): Boolean
    + hasPermission(PermissionId id): Boolean
    + getRoles(): Collection
    + getPermissions(): Collection
}
class RoleAggregate {
    - roleId: RoleId
    - code: String
    - name: String
    - platform: String
    - state: SwitchState
    - tenantId: TenantId
    - permsJson: Text
'    - createdAt: Long 创建时间
'    - updatedAt: Long 更新时间
'    - createdBy: UserId 创建人
'    - updatedBy: UserId 更新人
    + getUsers(): Collection
    + hasPermission(PermissionId id): Boolean
    + getPermissions(): Collection
}
class Permission {
    - permissionId: Long
    - resourceId: Long
    - operationId: Long
    - state: SwitchState
    - platform: String
    - tenantId: TenantId
'    - createdAt: Long
'    - updatedAt: Long
'    - createdBy: UserId
'    - updatedBy: UserId
}
class Resource {
    - resourceId: Long
    - code: String
    - name: String
    - platform: String
    - state: SwitchState
    - parentId: Long
    - tenantId: TenantId
'    - createdAt: Long
'    - updatedAt: Long
'    - createdBy: UserId
'    - updatedBy: UserId
}
class Operation {
    - operationId: Long
    - code: String
    - name: String
    - platform: String
    - state: SwitchState
    - tenantId: TenantId
'    - createdAt: Long
'    - updatedAt: Long
'    - createdBy: UserId
'    - updatedBy: UserId
}

Organization --> Organization
UserAggregate "1"-->"*" Organization
UserAggregate "1"-->"*" RoleAggregate
RoleAggregate "1"-->"*" Permission
Permission *-->"1" Resource
Permission *-->"1" Operation

@enduml